# CGU-Notices-Notifier

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build_and_test.yml
src/: bot.rs  constants.rs  db.rs  main.rs  notifier.rs  parse_env.rs  site_scraper.rs  structs.rs  utils.rs
