[package]
name = "cgu-notice-tg-bot"
version = "0.1.0"
edition = "2021"
authors = ["Prashant Rahul <prahantrahul141@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["full"] }
envy = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
reqwest = { version = "0.11.20", features = ["json"] }
tl = "0.7.7"
mongodb = "2.7.0"
